fix: solve product n:n supplier relationship
  - Add FetchType Lazy to entities
  - Improve integration tests